--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="global.css">
 </head>
 <body>
-    <h1>Simple Website - Progresive hydration</h1>
+    <h1>Simple Website - Progressive hydration</h1>
     <div style="padding-top: 25px;"></div>
     <div>
         <h1 class="hydrate">Count is 0</h1>
